# yate_modules

./: CMakeLists.txt  FindYate.cmake  README.md  fax2email.conf  fax2email.cpp  forwarder.conf  forwarder.cpp
debian/: README  changelog  control  copyright  rules  wwyate-modules.dirs  wwyate-modules.install
