CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(wwyate-modules CXX)

ADD_DEFINITIONS(-g -O2 -fno-check-new  -fno-exceptions -fPIC -DHAVE_GCC_FORMAT_CHECK -DHAVE_BLOCK_RETURN)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
find_package(Yate REQUIRED)

INCLUDE_DIRECTORIES(${YATE_INCLUDE_DIRS})

ADD_LIBRARY(fax2email SHARED fax2email.cpp)
TARGET_LINK_LIBRARIES(fax2email ${YATE_LIBRARIES})
SET_TARGET_PROPERTIES(fax2email PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(fax2email PROPERTIES SUFFIX .yate)

ADD_LIBRARY(forwarder SHARED forwarder.cpp)
TARGET_LINK_LIBRARIES(forwarder ${YATE_LIBRARIES})
SET_TARGET_PROPERTIES(forwarder PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(forwarder PROPERTIES SUFFIX .yate)

INSTALL(TARGETS fax2email
	DESTINATION ${YATE_MODULES_DIR}
	RENAME fax2email.yate
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(TARGETS forwarder
	DESTINATION ${YATE_MODULES_DIR}
	RENAME forwarder.yate
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES fax2email.conf forwarder.conf
	DESTINATION /etc/yate)